# rolldet

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  license.yml  publish.yml  tests.yml
src/rolldet/: __init__.py  detector.py  result.py  target.py
tests/: test_detector.py  test_meta.py
