[tool.poetry]
name = "python-template"
version = "1.0.0"
description = ""
authors = ["ionite34 <dev@ionite.io>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.971"
pylint = "^2.14.5"
black = "^22.6.0"
tox = "^3.25.1"
pre-commit = "^2.20.0"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "unused-argument",
    "no-value-for-parameter",
    "no-member",
    "no-else-return",
    "bad-whitespace",
    "bad-continuation",
    "line-too-long",
    "fixme",
    "protected-access",
    "too-few-public-methods",
]

[tool.pylint.design]
max-returns = 8

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
